@@ -1,0 +1,15 @@
+SUBDIRS = pm man src
+
+DISTCLEANFILES =		\
+	intltool-extract	\
+	intltool-merge		\
+	intltool-update
+
+EXTRA_DIST =			\
+	intltool-extract.in	\
+	intltool-merge.in	\
+	intltool-update.in	\
+	mkinstalldirs
+
+clean-local :
+	rm -f *~
