@@ -1,5 +1,14 @@
 2006-06-05  Richard Hughes  <richard@hughsie.com>
 
+	* Makefile:
+	Remove old build system, as Makefile is now autogenerated.
+
+	* Makefile.am:
+	* configure.in:
+	Add in master build files for the autotooled build system.
+
+2006-06-05  Richard Hughes  <richard@hughsie.com>
+
 	* man/Makefile.am:
 	Connect up the sgml->.1 conversion to the autotools build system.
 
